--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
+                <div 
+                    class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
                     <img src="assets/img/hero-img.png" class="img-fluid" alt="" />
                 </div>
             </div>
@@ -96,7 +97,7 @@
                             <p>SMK Negeri 4 Tanjungpinang berdiri sejak tahun 2008. SMK Negeri 4 Tanjungpinang merupakan salah satu sekolah di Kepulauan Riau yang terakreditas A.</p>
                             <div class="text-center text-lg-start">
                                 <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center"><span>Read More</span>
-                                    <i class="bi-arrow-right"></i>
+                                    <i class="bi bi-arrow-right"></i>
                                 </a>
                             </div>
                         </div>
