Update ada logo smkn 4

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <header id="header" class="header fixed-top">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-between">
       <a href="index.html" class="logo d-flex align-items-center">
-        <img src="assets/img/logo.png" alt=""><span>SMKN 4 Tanjungpinang</span>
+        <img src="assets/img/Logo SMKN 4 rgb.png" alt=""><span>SMKN 4 Tanjungpinang</span>
       </a>
       <nav id="navbar" class="navbar">
         <ul>
@@ -75,7 +75,7 @@
           </div>
         </div>
         <div class="col-lg-6 hero-img" data-aos="zoom-out" data-aos-delay="200">
-          <img src="assets/img/hero-img.png" class="img-fluid" alt="">
+          <img class="smkn4" src="assets/img/Logo SMKN 4 rgb.png" class="img-fluid" alt="">
         </div>
       </div>
     </div>
@@ -100,7 +100,7 @@
             </div>
           </div>
           <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
-            <img src="assets/img/about.jpg" class="img-fluid" alt="">
+            <img src="assets/img/32.jpg" class="img-fluid" alt="">
           </div>
         </div>
       </div>
